Rerun for ordered output

--- a/download_text_files.ipynb
+++ b/download_text_files.ipynb
@@ -30,19 +30,7 @@
     "\n",
     "warnings.filterwarnings(\n",
     "    \"ignore\",\n",
-    "    message=\"It looks like you're parsing an XML document using an HTML parser\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "09631656-327b-41d9-859d-f3dba8d391b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.makedirs(\"data\", exist_ok=True)\n",
-    "os.makedirs(\"10K_files\", exist_ok=True)"
+    "    message=\"It looks like you're parsing an XML document using an HTML parser\",)"
    ]
   },
   {
@@ -65,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c3339d9d-a569-45ee-8004-159f9b4b5da6",
    "metadata": {},
    "outputs": [],
@@ -81,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3372eb65-d73e-41d9-86f4-eebab54128cf",
    "metadata": {},
    "outputs": [
@@ -286,7 +274,7 @@
        "[503 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "da7de2f6-d42f-4bfc-907d-106a58b9c2c0",
    "metadata": {},
    "outputs": [],
@@ -326,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "abe34027-38b9-4676-a175-48e6df1d9851",
    "metadata": {},
    "outputs": [
@@ -334,7 +322,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 503/503 [00:03<00:00, 152.28it/s]\n"
+      "100%|██████████████████████████████████████| 503/503 [00:04<00:00, 122.25it/s]\n"
      ]
     }
    ],
@@ -369,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ef662674-c0e7-4b23-b2f5-af0ed4e3ef40",
    "metadata": {},
    "outputs": [],
@@ -386,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2d96214c-98d0-4b0d-86b9-01222384a70f",
    "metadata": {},
    "outputs": [
