Intermediate sample, missing 2021 data

--- a/build_sample.ipynb
+++ b/build_sample.ipynb
@@ -15,22 +15,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import fnmatch\n",
+    "# File and text handling\n",
     "import glob\n",
     "import os\n",
     "import re\n",
     "import pandas as pd\n",
-    "# from time import sleep\n",
+    "from bs4 import BeautifulSoup\n",
+    "from near_regex import NEAR_regex\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "# Load 2022 returns\n",
+    "# Gathering 2022 returns\n",
     "from zipfile import ZipFile\n",
     "from urllib.request import urlopen\n",
     "from io import BytesIO\n",
     "\n",
-    "# import numpy as np\n",
-    "from bs4 import BeautifulSoup\n",
-    "from near_regex import NEAR_regex\n",
-    "from tqdm import tqdm"
+    "# Get filing dates from SEC EDGAR\n",
+    "from requests_html import HTMLSession\n",
+    "from time import sleep"
    ]
   },
   {
@@ -51,7 +52,23 @@
     "firm_10k_path = \"10k_files/sec-edgar-filings\"\n",
     "\n",
     "# Outputs\n",
-    "sentiment_save_path = output_dir + '/ticker_sentiments.csv'"
+    "sentiment_save_path = output_dir + '/ticker_sentiments.csv'\n",
+    "returns_save_path = output_dir + '/ticker_returns.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e55228d9-c6cb-42ce-be39-b03ea1955fb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # TODO: Load S&P500 companies into a dataframe\n",
+    "# if not os.path.exists(sp500_path):\n",
+    "#     url = \"https://en.wikipedia.org/wiki/List_of_S%26P_500_companies\"\n",
+    "#     pd.read_html(url)[0].to_csv(sp500_path, index=False)  # [1] shows updates\n",
+    "\n",
+    "# sp500 = pd.read_csv(sp500_path)[['Symbol', 'Security', 'CIK']]"
    ]
   },
   {
@@ -193,14 +210,23 @@
     }
    ],
    "source": [
+    "# Download 2022 CSRP returns\n",
     "url = \"https://github.com/LeDataSciFi/data/raw/main/Stock%20Returns%20(CRSP)/crsp_2022_only.zip\"\n",
     "with urlopen(url) as request:\n",
     "    data = BytesIO(request.read())\n",
     "\n",
     "with ZipFile(data) as archive:\n",
     "    with archive.open(archive.namelist()[0]) as stata:\n",
-    "        stock_rets = pd.read_stata(stata)\n",
-    "\n",
+    "        stock_rets = pd.read_stata(stata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4069649c-2d84-4ab3-9f3b-4896eaec6bf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "stock_rets"
    ]
   },
@@ -475,6 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: remove duplicated code here\n",
     "if not os.path.exists(sp500_path):\n",
     "    url = \"https://en.wikipedia.org/wiki/List_of_S%26P_500_companies\"\n",
     "    pd.read_html(url)[0].to_csv(sp500_path, index=False)  # [1] shows updates\n",
@@ -489,13 +516,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Simplify \n",
     "def add_sentiment(df, i, sentiment_name, search, text, word_count):\n",
     "    df.loc[i, sentiment_name] = len(re.findall(search, text)) / word_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "81201d43-c23b-4601-bade-b3eadad933cd",
    "metadata": {},
    "outputs": [
@@ -573,8 +601,338 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|██████████████████████████▏          | 356/503 [1:19:36<20:09,  8.23s/it]"
+      " 83%|██████████████████████████████▋      | 417/503 [1:34:26<20:13, 14.11s/it]"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot find 10-K for ticker SBNY\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 96%|███████████████████████████████████▍ | 481/503 [1:48:44<04:46, 13.02s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot find 10-K for ticker WBD\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████| 503/503 [1:53:13<00:00, 13.51s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Security</th>\n",
+       "      <th>CIK</th>\n",
+       "      <th>word_count</th>\n",
+       "      <th>bhr_negative</th>\n",
+       "      <th>bhr_positive</th>\n",
+       "      <th>lm_negative</th>\n",
+       "      <th>lm_positive</th>\n",
+       "      <th>esg_negative</th>\n",
+       "      <th>esg_positive</th>\n",
+       "      <th>ecom_negative</th>\n",
+       "      <th>ecom_positive</th>\n",
+       "      <th>bio_negative</th>\n",
+       "      <th>bio_positive</th>\n",
+       "      <th>unique_word_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MMM</td>\n",
+       "      <td>3M</td>\n",
+       "      <td>66740</td>\n",
+       "      <td>76432.0</td>\n",
+       "      <td>0.044314</td>\n",
+       "      <td>0.041750</td>\n",
+       "      <td>0.043097</td>\n",
+       "      <td>0.015125</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000013</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000052</td>\n",
+       "      <td>0.000118</td>\n",
+       "      <td>6384.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AOS</td>\n",
+       "      <td>A. O. Smith</td>\n",
+       "      <td>91142</td>\n",
+       "      <td>33810.0</td>\n",
+       "      <td>0.032919</td>\n",
+       "      <td>0.038391</td>\n",
+       "      <td>0.034102</td>\n",
+       "      <td>0.013162</td>\n",
+       "      <td>0.000030</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000089</td>\n",
+       "      <td>3801.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ABT</td>\n",
+       "      <td>Abbott</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>52061.0</td>\n",
+       "      <td>0.039492</td>\n",
+       "      <td>0.039761</td>\n",
+       "      <td>0.036246</td>\n",
+       "      <td>0.010584</td>\n",
+       "      <td>0.000019</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000038</td>\n",
+       "      <td>0.000115</td>\n",
+       "      <td>0.000365</td>\n",
+       "      <td>5045.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABBV</td>\n",
+       "      <td>AbbVie</td>\n",
+       "      <td>1551152</td>\n",
+       "      <td>61560.0</td>\n",
+       "      <td>0.035185</td>\n",
+       "      <td>0.034958</td>\n",
+       "      <td>0.035819</td>\n",
+       "      <td>0.014766</td>\n",
+       "      <td>0.000016</td>\n",
+       "      <td>0.000016</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000016</td>\n",
+       "      <td>0.000065</td>\n",
+       "      <td>0.000276</td>\n",
+       "      <td>5886.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ACN</td>\n",
+       "      <td>Accenture</td>\n",
+       "      <td>1467373</td>\n",
+       "      <td>51953.0</td>\n",
+       "      <td>0.034127</td>\n",
+       "      <td>0.046754</td>\n",
+       "      <td>0.036437</td>\n",
+       "      <td>0.018440</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000058</td>\n",
+       "      <td>0.000019</td>\n",
+       "      <td>0.000038</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000058</td>\n",
+       "      <td>5169.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>YUM</td>\n",
+       "      <td>Yum! Brands</td>\n",
+       "      <td>1041061</td>\n",
+       "      <td>84234.0</td>\n",
+       "      <td>0.032873</td>\n",
+       "      <td>0.041052</td>\n",
+       "      <td>0.034630</td>\n",
+       "      <td>0.013771</td>\n",
+       "      <td>0.000059</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000024</td>\n",
+       "      <td>0.000059</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>0.000024</td>\n",
+       "      <td>4945.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>ZBRA</td>\n",
+       "      <td>Zebra Technologies</td>\n",
+       "      <td>877212</td>\n",
+       "      <td>46978.0</td>\n",
+       "      <td>0.038273</td>\n",
+       "      <td>0.044680</td>\n",
+       "      <td>0.033846</td>\n",
+       "      <td>0.019775</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4750.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500</th>\n",
+       "      <td>ZBH</td>\n",
+       "      <td>Zimmer Biomet</td>\n",
+       "      <td>1136869</td>\n",
+       "      <td>64913.0</td>\n",
+       "      <td>0.038544</td>\n",
+       "      <td>0.035232</td>\n",
+       "      <td>0.039176</td>\n",
+       "      <td>0.013233</td>\n",
+       "      <td>0.000015</td>\n",
+       "      <td>0.000031</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000031</td>\n",
+       "      <td>0.000169</td>\n",
+       "      <td>4577.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>501</th>\n",
+       "      <td>ZION</td>\n",
+       "      <td>Zions Bancorporation</td>\n",
+       "      <td>109380</td>\n",
+       "      <td>61897.0</td>\n",
+       "      <td>0.029307</td>\n",
+       "      <td>0.028208</td>\n",
+       "      <td>0.028951</td>\n",
+       "      <td>0.008756</td>\n",
+       "      <td>0.000016</td>\n",
+       "      <td>0.000032</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3818.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>502</th>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>Zoetis</td>\n",
+       "      <td>1555280</td>\n",
+       "      <td>78429.0</td>\n",
+       "      <td>0.044512</td>\n",
+       "      <td>0.035561</td>\n",
+       "      <td>0.038073</td>\n",
+       "      <td>0.014472</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000051</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000013</td>\n",
+       "      <td>0.000077</td>\n",
+       "      <td>0.000255</td>\n",
+       "      <td>5913.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>503 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Symbol              Security      CIK  word_count  bhr_negative  \\\n",
+       "0      MMM                    3M    66740     76432.0      0.044314   \n",
+       "1      AOS           A. O. Smith    91142     33810.0      0.032919   \n",
+       "2      ABT                Abbott     1800     52061.0      0.039492   \n",
+       "3     ABBV                AbbVie  1551152     61560.0      0.035185   \n",
+       "4      ACN             Accenture  1467373     51953.0      0.034127   \n",
+       "..     ...                   ...      ...         ...           ...   \n",
+       "498    YUM           Yum! Brands  1041061     84234.0      0.032873   \n",
+       "499   ZBRA    Zebra Technologies   877212     46978.0      0.038273   \n",
+       "500    ZBH         Zimmer Biomet  1136869     64913.0      0.038544   \n",
+       "501   ZION  Zions Bancorporation   109380     61897.0      0.029307   \n",
+       "502    ZTS                Zoetis  1555280     78429.0      0.044512   \n",
+       "\n",
+       "     bhr_positive  lm_negative  lm_positive  esg_negative  esg_positive  \\\n",
+       "0        0.041750     0.043097     0.015125      0.000000      0.000013   \n",
+       "1        0.038391     0.034102     0.013162      0.000030      0.000000   \n",
+       "2        0.039761     0.036246     0.010584      0.000019      0.000000   \n",
+       "3        0.034958     0.035819     0.014766      0.000016      0.000016   \n",
+       "4        0.046754     0.036437     0.018440      0.000000      0.000058   \n",
+       "..            ...          ...          ...           ...           ...   \n",
+       "498      0.041052     0.034630     0.013771      0.000059      0.000000   \n",
+       "499      0.044680     0.033846     0.019775      0.000000      0.000000   \n",
+       "500      0.035232     0.039176     0.013233      0.000015      0.000031   \n",
+       "501      0.028208     0.028951     0.008756      0.000016      0.000032   \n",
+       "502      0.035561     0.038073     0.014472      0.000000      0.000051   \n",
+       "\n",
+       "     ecom_negative  ecom_positive  bio_negative  bio_positive  \\\n",
+       "0         0.000000       0.000000      0.000052      0.000118   \n",
+       "1         0.000000       0.000000      0.000000      0.000089   \n",
+       "2         0.000000       0.000038      0.000115      0.000365   \n",
+       "3         0.000000       0.000016      0.000065      0.000276   \n",
+       "4         0.000019       0.000038      0.000000      0.000058   \n",
+       "..             ...            ...           ...           ...   \n",
+       "498       0.000024       0.000059      0.000012      0.000024   \n",
+       "499       0.000000       0.000000      0.000000      0.000000   \n",
+       "500       0.000000       0.000000      0.000031      0.000169   \n",
+       "501       0.000000       0.000000      0.000000      0.000000   \n",
+       "502       0.000000       0.000013      0.000077      0.000255   \n",
+       "\n",
+       "     unique_word_count  \n",
+       "0               6384.0  \n",
+       "1               3801.0  \n",
+       "2               5045.0  \n",
+       "3               5886.0  \n",
+       "4               5169.0  \n",
+       "..                 ...  \n",
+       "498             4945.0  \n",
+       "499             4750.0  \n",
+       "500             4577.0  \n",
+       "501             3818.0  \n",
+       "502             5913.0  \n",
+       "\n",
+       "[503 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -592,10 +950,10 @@
     "            html = report_file.read()\n",
     "        soup = BeautifulSoup(html, 'lxml-xml')\n",
     "        for div in soup.find_all(\"div\", {'style': 'display:none'}):\n",
-    "            div.decompose()\n",
-    "        lower = soup.get_text().lower()\n",
-    "        no_punc = re.sub(r'\\W', ' ', lower)\n",
-    "        cleaned = re.sub(r'\\s+', ' ', no_punc)\n",
+    "            div.decompose()                       # remove hidden divs,\n",
+    "        lower = soup.get_text().lower()           # uppercase,\n",
+    "        no_punc = re.sub(r'\\W', ' ', lower)       # non-alpha-numeric,\n",
+    "        cleaned = re.sub(r'\\s+', ' ', no_punc)    # single-space\n",
     "    \n",
     "        # Add word count and unique word count\n",
     "        word_list = re.findall(r'\\w+', cleaned)\n",
