Replace 10-K ticker download with CIK download on error

--- a/download_text_files.ipynb
+++ b/download_text_files.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "3bdb7b14-d12e-47d0-912a-207970be9ddf",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,7 @@
     "import traceback\n",
     "import re\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "from requests_html import HTMLSession\n",
     "from sec_edgar_downloader import Downloader\n",
@@ -322,7 +323,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 503/503 [00:04<00:00, 122.25it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 503/503 [00:01<00:00, 276.17it/s]\n"
      ]
     }
    ],
@@ -337,8 +338,8 @@
     "    if not file_downloaded:\n",
     "        try:\n",
     "            dl.get(download_type, tic, before=before, amount=amount)\n",
-    "        except Exception:\n",
-    "            print(f'Error on {tic}: {sys.exc_info()[2]}')\n",
+    "        except Exception as error:\n",
+    "            print(f'Error on {tic}: {repr(error)}')\n",
     "\n",
     "    # Check and delete any .txt files in path\n",
     "    for file in glob.glob(tic_res_path + '/*/*.txt'):\n",
@@ -350,9 +351,11 @@
    "id": "25eec497-d65f-4821-a809-9d6e4cb042ae",
    "metadata": {},
    "source": [
-    "### Check for Erroneous Filings\n",
+    "### Check for Missing and Erroneous Filings\n",
     "\n",
-    "Checking the first ticker, A, we find that the `sec_edgar_downloader` incorrectly downloaded ticker HEI.A (HEICO Corporation) instead of A (Agilent Technologies), along with many other mistaken tickers.  In this loop, we find the company name specified in the S&P500 table and compare it to the name found in the 10-K."
+    "Checking the first ticker, A, we find that the `sec_edgar_downloader` incorrectly downloaded ticker HEI.A (HEICO Corporation) instead of A (Agilent Technologies), along with many other mistaken tickers.  In this loop, we find the company name specified in the S&P500 table and compare it to the name found in the 10-K.\n",
+    "\n",
+    "Also note that only 496 of the 503 expected folders are present.  For this reason, we should download these firms with the constant CIK value."
    ]
   },
   {
@@ -362,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace existing misspellings in sp500 table\n",
+    "# Replace misspellings in sp500 table\n",
     "sp500.loc[sp500['Symbol'] == 'GWW', ['Security']] = 'W.W. Grainger'\n",
     "sp500.loc[sp500['Symbol'] == 'COO', ['Security']] = 'The Cooper Companies, Inc.'\n",
     "sp500.loc[sp500['Symbol'] == 'HSY', ['Security']] = 'The Hershey Company'\n",
@@ -374,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "2d96214c-98d0-4b0d-86b9-01222384a70f",
    "metadata": {},
    "outputs": [
@@ -382,72 +385,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cannot find Agilent Technologies in A's 10-K\n",
-      "Cannot find Allstate in ALL's 10-K\n",
-      "\tCannot find ticker BRK.B\n",
-      "Cannot find Bio-Rad in BIO's 10-K\n",
-      "Cannot find Bio-Techne in TECH's 10-K\n",
-      "Cannot find BNY Mellon in BK's 10-K\n",
-      "Cannot find Boeing in BA's 10-K\n",
-      "\tCannot find ticker BF.B\n",
-      "Cannot find Caterpillar in CAT's 10-K\n",
-      "Cannot find CF Industries in CF's 10-K\n",
-      "Cannot find Chipotle Mexican Grill in CMG's 10-K\n",
-      "Cannot find Chubb Limited in CB's 10-K\n",
-      "Cannot find Citigroup in C's 10-K\n",
-      "Cannot find Darden Restaurants in DRI's 10-K\n",
-      "Cannot find John Deere in DE's 10-K\n",
-      "Cannot find Dominion Energy in D's 10-K\n",
-      "\tCannot find ticker ELV\n",
-      "Cannot find Essex Property Trust in ESS's 10-K\n",
-      "Cannot find Fastenal in FAST's 10-K\n",
-      "\tCannot find ticker FRC\n",
-      "Cannot find FirstEnergy in FE's 10-K\n",
-      "Cannot find Ford Motor Company in F's 10-K\n",
-      "Cannot find Gartner in IT's 10-K\n",
-      "\tCannot find ticker GEHC\n",
-      "Cannot find Gen Digital in GEN's 10-K\n",
-      "Cannot find General Motors in GM's 10-K\n",
-      "Cannot find Healthpeak in PEAK's 10-K\n",
-      "Cannot find Host Hotels.+Resorts in HST's 10-K\n",
-      "Cannot find Ingersoll Rand in IR's 10-K\n",
-      "Cannot find Intercontinental Exchange in ICE's 10-K\n",
-      "Cannot find International Paper in IP's 10-K\n",
-      "Cannot find Interpublic Group of Companies in IPG's 10-K\n",
-      "Cannot find Jacobs Solutions in J's 10-K\n",
-      "Cannot find KeyCorp in KEY's 10-K\n",
-      "Cannot find Loews Corporation in L's 10-K\n",
-      "Cannot find Mastercard in MA's 10-K\n",
-      "Cannot find Meta Platforms in META's 10-K\n",
-      "Cannot find MetLife in MET's 10-K\n",
-      "Cannot find Micron Technology in MU's 10-K\n",
-      "Cannot find Moody.s Corporation in MCO's 10-K\n",
-      "Cannot find Morgan Stanley in MS's 10-K\n",
-      "Cannot find NiSource in NI's 10-K\n",
-      "Cannot find ON Semiconductor in ON's 10-K\n",
-      "Cannot find Philip Morris International in PM's 10-K\n",
-      "Cannot find Realty Income in O's 10-K\n",
-      "Cannot find Regions Financial Corporation in RF's 10-K\n",
-      "Cannot find ServiceNow in NOW's 10-K\n",
-      "\tCannot find ticker SBNY\n",
-      "Cannot find Stanley Black.+Decker in SWK's 10-K\n",
-      "\tCannot find ticker WBD\n",
-      "Cannot find Waste Management in WM's 10-K\n",
-      "Cannot find Welltower in WELL's 10-K\n",
-      "Cannot find Weyerhaeuser in WY's 10-K\n",
-      "Cannot find Zions Bancorporation in ZION's 10-K\n",
-      "47\n"
+      "Cannot find path of tickers:\n",
+      " {'GEHC', 'BRK.B', 'FRC', 'ELV', 'WBD', 'SBNY', 'BF.B'}\n",
+      "Cannot find company name in 10-K of  47  tickers:\n",
+      " {'BA', 'IP', 'WELL', 'ESS', 'IT', 'ICE', 'ON', 'D', 'MET', 'DRI', 'GEN', 'MCO', 'CAT', 'IPG', 'CB', 'FAST', 'O', 'BIO', 'PM', 'WY', 'NOW', 'IR', 'FE', 'SWK', 'CMG', 'MU', 'DE', 'META', 'A', 'L', 'WM', 'MS', 'NI', 'CF', 'ZION', 'PEAK', 'BK', 'F', 'TECH', 'KEY', 'GM', 'J', 'HST', 'ALL', 'RF', 'MA', 'C'}\n"
      ]
     }
    ],
    "source": [
     "counter = 0\n",
+    "missing_path_tics = set()\n",
+    "missing_content_tics = set()\n",
     "\n",
     "for tic in tics:\n",
     "    tic_res_path = rf'{res_path}\\sec-edgar-filings\\{tic}\\{download_type}'\n",
     "    \n",
     "    if not os.path.exists(tic_res_path):\n",
-    "        print(f'\\tCannot find ticker {tic}')\n",
+    "        # print(f'\\tCannot find ticker {tic}')\n",
+    "        missing_path_tics.add(tic)\n",
     "        continue\n",
     "    \n",
     "    for file in glob.glob(tic_res_path+'/*/*.html'):\n",
@@ -463,10 +418,83 @@
     "        \n",
     "        # Search in file\n",
     "        if not re.search(appx_tic.encode('utf-8'), html, re.IGNORECASE):\n",
-    "            print(f'Cannot find {appx_tic} in {tic}\\'s {download_type}')\n",
+    "            # print(f'Cannot find {appx_tic} in {tic}\\'s {download_type}')\n",
+    "            missing_content_tics.add(tic)\n",
     "            counter += 1\n",
     "\n",
-    "print(counter)"
+    "print(\"Cannot find path of tickers:\\n\", missing_path_tics)\n",
+    "print(\"Cannot find company name in 10-K of \", counter, \" tickers:\\n\", missing_content_tics)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27ffeebb-465a-4dae-9de4-6b9233738f05",
+   "metadata": {},
+   "source": [
+    "### Replace Missing and Erroneous Filings\n",
+    "\n",
+    "First, we download 10-Ks using the CIKs of firms that it failed on.\n",
+    "\n",
+    "Then, we add a column to the data indicating which path is the correct path for each ticker.  Alternatively, we could move these files to the expected ticker path."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ca5792c3-9dfa-4477-b5e0-3e6d928ba4f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████| 54/54 [03:23<00:00,  3.76s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Handle all failed 10-Ks\n",
+    "missing_all_tics = set()\n",
+    "missing_all_tics.update(missing_path_tics)\n",
+    "missing_all_tics.update(missing_content_tics)\n",
+    "\n",
+    "# \n",
+    "for tic in tqdm(missing_all_tics):\n",
+    "    # Look up the CIK in the sp500 df\n",
+    "    cik = sp500.loc[sp500['Symbol'] == tic, 'CIK'].item()\n",
+    "    \n",
+    "    # Download based on the CIK from EDGAR\n",
+    "    cik_res_path = rf'{res_path}\\sec-edgar-filings\\{cik}\\{download_type}'\n",
+    "    file_downloaded = (\n",
+    "        os.path.exists(cik_res_path) and len(os.listdir(cik_res_path)) >= amount\n",
+    "    )  # quick check\n",
+    "    \n",
+    "    if not file_downloaded:\n",
+    "        try:\n",
+    "            dl.get(download_type, cik, before=before, amount=amount)\n",
+    "        except Exception as error:\n",
+    "            print(f'Error on {tic}: {repr(error)}')\n",
+    "\n",
+    "    # Check and delete any .txt files in path\n",
+    "    for file in glob.glob(cik_res_path + '/*/*.txt'):\n",
+    "        os.remove(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "c96ad5eb-cf01-425f-869c-70302250e8fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add a new column to the sp500 set indicating which path to access\n",
+    "sp500['truth_path'] = np.where(\n",
+    "        sp500['Symbol'].isin(missing_all_tics),\n",
+    "        sp500['CIK'].apply(lambda x: '{0:0>10}'.format(x)),    # all CIK paths prepended with 0s\n",
+    "        sp500['Symbol'])\n",
+    "\n",
+    "# Persist updates\n",
+    "sp500.to_csv(sp500_path, index=False)"
    ]
   }
  ],
